Objectos Way In A Single File (OWIASF) v005
Closes #3

$source=7fa0b05ea4f4717d78528c10b23aa03b9e42eeb8$